--- a/src/main/resources/templates/edit/editPasswordForm.html
+++ b/src/main/resources/templates/edit/editPasswordForm.html
@@ -9,7 +9,7 @@
   <nav th:replace="~{duplication :: navigation}"></nav>
 
   <main style="text-align: center;">
-    <form method="post" name="addForm" action="index.html" th:action="@{|/edit/${session.loginUser.loginId}|}" th:object="${passwordForm}" class="login-box">
+    <form method="post" name="addForm" action="index.html" th:action="@{|/edit/${session.loginMember.loginId}|}" th:object="${passwordForm}" class="login-box">
       <p class="login-text">비밀번호 변경</p>
       <div class="id-box">
         <div th:if="${#fields.hasGlobalErrors()}" class="global-error">
@@ -24,7 +24,7 @@
 
         <input type="submit" value="변경하기" class="submit-box">
       </div>
-      <a class="edit-box" th:href="@{|/userInfo/${session.loginUser.loginId}|}">취소</a>
+      <a class="edit-box" th:href="@{|/memberInfo/${session.loginMember.loginId}|}">취소</a>
     </form>
   </main>
 
