--- a/src/main/resources/templates/edit/editBoardForm.html
+++ b/src/main/resources/templates/edit/editBoardForm.html
@@ -11,7 +11,7 @@
   <main>
     <div class="blog-post">
       <input type="hidden" id="boardId" th:value="${board.id}">
-      <input type="hidden" class="user-id" id="userId" th:data-login-id="${session.loginUser.loginId}">
+      <input type="hidden" class="member-id" id="memberId" th:data-login-id="${session.loginMember.loginId}">
       <input type="text" id="blogTitle" name="title" th:value="${board.title}" class="blog-title-input" />
       <hr>
       <select id="blogPart" name="part" class="part-input">
@@ -182,7 +182,7 @@
         var id = document.getElementById('boardId').value;
         var title = document.getElementById('blogTitle').value;
         var part = document.getElementById('blogPart').value;
-        var loginId = document.getElementById('userId').getAttribute('data-login-id');
+        var loginId = document.getElementById('memberId').getAttribute('data-login-id');
         var content = document.querySelector('.editable-content').innerHTML;
         var timestamp = new Date().toISOString();
 
