--- a/src/main/resources/templates/page/searchPage.html
+++ b/src/main/resources/templates/page/searchPage.html
@@ -11,7 +11,7 @@
   <main>
     <div class="content" th:each="board : ${board}">
       <a href="#" th:href="@{|/board/${board.id}|}" class="content-title" th:text="${board.title}">백준 105번</a>
-      <span class="content-user" th:text="${board.loginId}">kjh1234</span>
+      <span class="content-member" th:text="${board.loginId}">kjh1234</span>
       <div th:text="${board.commentCount}">댓글 수</div>
       <p class="content-part" th:text="${board.part}">DFS / BFS</p>
     </div>
