--- a/src/main/resources/templates/duplication.html
+++ b/src/main/resources/templates/duplication.html
@@ -7,6 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Jua&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&family=Gasoek+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/mainpage.css">
 </head>
 <body>
@@ -28,7 +30,7 @@
   </div>
 
   <header th:fragment="header">
-    <div><a href="/" th:href="@{/}">1일 1알고리즘</a></div>
+    <div><a href="/" th:href="@{/}" style="font-family: 'Gasoek One', sans-serif; font-size:42px">1일 1알고리즘</a></div>
   </header>
 
   <nav th:fragment="navigation">
@@ -45,7 +47,7 @@
   </nav>
 
   <footer th:fragment="footer">
-    <div>footer</div>
+    <div></div>
   </footer>
 
   <script src="../javascript/menubar.js"></script>
