--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -38,6 +38,11 @@
             </div>
         </form>
         <a href="/add" th:href="@{/add}" class="new-member">회원가입</a>
+        <div>
+            <a href="/oauth2/authorization/google">
+                <img src="/image/googleloginicon.png"/>
+            </a>
+        </div>
     </main>
 
     <footer th:replace="~{duplication :: footer}"></footer>
